Add teacher table model and fix some bugs

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "schools_db",
+    "database": "school_db",
     "host": "localhost",
     "dialect": "mysql"
   },
